Change export buttons to actual buttons and align correctly in ie

--- a/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
+++ b/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
@@ -1029,3 +1029,9 @@ padding: 0 12px;
     width: 100%;
     margin-top: 10px;
 }
+
+.export {
+    button {
+        vertical-align: bottom;
+    }
+}
